@@ -7,6 +7,14 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2023 JAN 22b
+  * in src/control.c
+    - in integrate_area_on_bdry(), added the parameter AreaMag and code needed to compute AreaMag
+    - in read_control_functions(), added function _AreaMag()
+  * in src/post.c
+    - in read_post_functions(), changed call to integrate_area_on_bdry() to include AreaMag
+    
+
 2023 JAN 22a
   * in src/control.c
     - in readcontrol_actions(), added the action BdryMod
